
AM_CFLAGS = @CFLAGS@ -I../lib 
AM_LDFLAGS = @LDFLAGS@


noinst_HEADERS = newopt.h strdup.h trace.h basename.h unix.h mkrdir.h queue.h \
                 dirname.h i18n.h dll.h snprintf.h stm.h stack.h rm.h queue.h \
                 dirstack.h ftw_.h
noinst_LIBRARIES = libmisc.a

libmisc_a_SOURCES = newopt.c strdup.c trace.c basename.c mkrdir.c queue.c \
                    dirname.c stm.c stack.c rm.c queue.c \
		    dirstack.c  ftw_.c


EXTRA_DIST = dll.c snprintf.c  dirent_.h dirent.c getline.c getline_.h \
	itoa.c itoa.h Makefile.mine \
	trio/example.c \
	trio/Makefile \
	trio/FILES \
	trio/README \
	trio/compare.c \
	trio/triodef.h \
	trio/trionan.c \
	trio/trionan.h \
	trio/triostr.c \
	trio/triostr.h \
	trio/triostr.o \
	trio/maketgz \
	trio/configure.in \
	trio/install-sh \
	trio/autogen.sh  \
	trio/strio.h \
	trio/Makefile.in \
	trio/triop.h \
	trio/regression.c \
	trio/trio.c \
	trio/trio.h \
	trio/CHANGES \
	trio/doc/trio.cfg \
	trio/doc/trio.css  \
	trio/doc/doc.h \
	trio/doc/doc_register.h \
	trio/doc/doc_scanf.h \
	trio/doc/doc_static.h \
	trio/doc/doc_printf.h \
	trio/doc/footer.html \
	trio/doc/doc_dynamic.h \
	trio/doc/header.html  \
	trio/html/group___dynamic_strings.html \
	trio/html/group___printf.html \
	trio/html/group___scanf.html  \
	trio/html/group___special_quantities.html \
	trio/html/group___static_strings.html \
	trio/html/group___user_defined.html   \
	trio/html/index.html  \
	trio/html/modules.html \
	trio/html/trio.css \
	trio/html/modules.html 
